# cpp-logger

./: .gitignore  CMakeLists.txt  Makefile  appveyor.yml  changelog.md  inc.mak  readme.md  xmake.lua
core/: xmake.lua
core/include/dig-logger/: creator.hpp  interface.hpp  level.hpp  logger.hpp
core/src/: dummy.cpp  logger.cpp
demo/: demo.cpp
hdr/: logger.hpp
include/: logger.hpp
old/: CMakeLists.txt  xmake.lua
old/include/: logger.hpp
printer/formatter/: xmake.lua
printer/formatter/include/dig-logger/printer/: formatter.hpp
printer/formatter/src/: formatter.cpp
printer/html/: xmake.lua
printer/html/include/dig-logger/printer/: html.hpp
printer/html/src/: html.cpp
printer/plain/: xmake.lua
printer/plain/include/dig-logger/printer/: plain.hpp
printer/plain/src/: plain.cpp
printer/stdout/: xmake.lua
printer/stdout/include/dig-logger/printer/: stdout.hpp
printer/stdout/src/: stdout.cpp
printer/stdout/src/color/: linux.cpp  windows.cpp
printer/stream/: xmake.lua
printer/stream/include/dig-logger/printer/: stream.hpp
printer/stub/: xmake.lua
printer/stub/include/dig-logger/printer/: stub.hpp
src/: logger.cpp
test/: appveyor.lua  appveyor.ps1  xmake.lua
test/src/common/: forwarding.hpp  random-string.hpp
test/src/core/: logger.cpp  null-safety.cpp  type-check.cpp
test/src/filter/: forwarding.cpp  maximum.cpp  minimum.cpp  null-safety.cpp
test/src/union/: forwarding.cpp  null-safety.cpp
util/filter/: xmake.lua
util/filter/include/dig-logger/util/: filter.hpp
util/filter/src/: filter.cpp
util/union/: xmake.lua
(+1 files in other folders)
